sandbox/output
NumberParserTest.java:9: error: cannot find symbol
        NumberParser parser = new Numberparser();
                                  ^
  symbol:   class Numberparser
  location: class NumberParserTest
1 error
